# EE_297

./: .gitignore  README.md
.ipynb_checkpoints/: GPU Check-checkpoint.ipynb
ML_PATH_EE297/EE297_env/: .gitignore  GPU Check.ipynb  pyvenv.cfg
ML_PATH_EE297/EE297_env/.ipynb_checkpoints/: GPU Check-checkpoint.ipynb
ML_PATH_EE297/EE297_env/01_main/: 01_traffic_sign_only.ipynb  02_lane_seg_only.ipynb  dual_multihead_design.ipynb  lane_seg_only.ipynb  preliminary_sw_design.ipynb
ML_PATH_EE297/EE297_env/02_projects/: Lenet Design.ipynb  build_gen.txt  lenet_fp16.ipynb  rename.txt
ML_PATH_EE297/EE297_env/03_example_code/: lane-detection-cnn-tusimple.ipynb  lane-detection-model.ipynb  tusimple-lane-detection.ipynb
ML_PATH_EE297/EE297_env/Scripts/: activate  activate.bat  activate.fish  activate.nu
ML_PATH_EE297/EE297_env/projects/: Lenet Design.ipynb  conv1_biases.h  conv1_weights.h  conv2_biases.h  conv2_weights.h  img_5.txt
ML_PATH_EE297/EE297_env/reference_eg/: part1_getting_started.ipynb
ML_PATH_EE297/EE297_env/zTransfer/: run_EE297_jupyter.ps1
hardware_imp/: PYNQ-Z1_C.xdc
hardware_imp/archive/pynq_lenet/: pynq_lenet.xpr
hardware_imp/vivado/lenet_zynq_2025/lenet_zynq.ip_user_files/sim_scripts/lenet_bd/activehdl/: CMakeLists.txt  Makefile  README.txt  compile.do  lenet_bd.bda  lenet_bd.sh  top.yaml
vivado/lenet_proj/: .cproject  .project  .vitis_hls_log_all.xml  hls.app  lenet_support.cpp  lenet_top.c  lenet_top.cpp  lenet_top.h  lenet_top_tb.cpp
vivado/lenet_proj/lenet/: lenet.aps  (+2 more)
vivado/lenet_proj_fp16/: .project  hls.app  top16.cpp  top16.h
(+1782 files in other folders)
